--- a/public/Materialize/css/materialize.css
+++ b/public/Materialize/css/materialize.css
@@ -2727,7 +2727,8 @@ video.responsive-video {
 }
 
 .pagination li.active {
-  background-color: #ee6e73;
+	/*modified*/
+  background-color: #42a5f5;
 }
 
 .pagination li.disabled a {
@@ -7994,7 +7995,8 @@ small {
 }
 
 .tabs .tab a {
-  color: #ee6e73;
+	/*modified*/
+  color: blue;
   display: block;
   width: 100%;
   height: 100%;
@@ -8004,7 +8006,8 @@ small {
 }
 
 .tabs .tab a:hover {
-  color: #f9c9cb;
+  /*modified*/
+	color: #64b5f6;
 }
 
 .tabs .tab.disabled a {
@@ -8013,10 +8016,11 @@ small {
 }
 
 .tabs .indicator {
+	/*modified*/
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #f6b2b5;
+  background-color: blue;
   will-change: left, right;
 }
 
