data table added

--- a/public/Materialize/css/style.css
+++ b/public/Materialize/css/style.css
@@ -78,7 +78,16 @@ div.scroll {
 #buttonhover:hover
 {
 	font-size: 25px;
+    font-weight: bold;
+
+
 }
+
+.waves-effect.waves-blue .waves-ripple {
+     /* The alpha value allows the text and background color
+     of the button to still show through. */
+      background-color: #03a9f4 ;
+    }
 
 
 
