--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,8 +109,8 @@ div.scroll {
    }
    /* invalid color */
    .input-field input[type=text].invalid {
-     border-bottom: 1px solid #64b5f6;
-     box-shadow: 0 1px 0 0 #64b5f6;
+     border-bottom: 1px solid red;
+     box-shadow: 0 1px 0 0 red;
    }
    /* icon prefix focus color */
    .input-field .prefix.active {
