--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -3659,7 +3659,7 @@ nav ul a span.badge {
   content: "\e60c";
 }
 
-.mdi-action-announcement:before {
+.mdi-action-announcementmdi-action-announcement:before {
   content: "\e60d";
 }
 
@@ -8248,7 +8248,7 @@ button.btn-floating {
   color: rgba(0, 0, 0, 0.87);
   cursor: pointer;
   min-height: 50px;
-  line-height: 1.5rem;
+  line-height: 10rem;
   width: 100%;
   text-align: left;
   text-transform: none;
