--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,8 +50,13 @@ div.scroll {
 
 .modal-header
 {
-    color: #fff;
-    background-color: #01579b;
+    color: #F1F3CE;
+ 
+}
+
+.h
+{
+      background-color: #00293C;
 }
 
 
