--- a/public/css/materialize1.css
+++ b/public/css/materialize1.css
@@ -5247,6 +5247,7 @@ nav {
         background-color: rgba(0, 0, 0, 0.1); }
     nav ul a {
       font-size: 1rem;
+      font-size: 1rem;
       color: #fff;
       display: block;
       padding: 0 15px; }
@@ -6461,7 +6462,7 @@ textarea.materialize-textarea {
     -ms-transition: color 0.2s;
     transition: color 0.2s; }
     .input-field .prefix.active {
-      color: #ff4081; }
+      color: #00293C; }
   .input-field .prefix ~ input,
   .input-field .prefix ~ textarea {
     margin-left: 3rem;
