--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,6 +115,36 @@ div.scroll {
      color: #64b5f6;
    }
 
+
+
+
+  .input-field label {
+     color: #64b5f6;
+   }
+   /* label focus color */
+   .input-field input[type=password]:focus + label {
+     color: #64b5f6;
+   }
+   /* label underline focus color */
+   .input-field input[type=password]:focus {
+     border-bottom: 1px solid #64b5f6;
+     box-shadow: 0 1px 0 0 #64b5f6;
+   }
+   /* valid color */
+   .input-field input[type=password].valid {
+     border-bottom: 1px solid #64b5f6;
+     box-shadow: 0 1px 0 0 #64b5f6;
+   }
+   /* invalid color */
+   .input-field input[type=password].invalid {
+     border-bottom: 1px solid red;
+     box-shadow: 0 1px 0 0 red;
+   }
+   /* icon prefix focus color */
+   .input-field .prefix.active {
+     color: #64b5f6;
+   }
+
 .sidenavhover
 {
 	overflow:hidden;
