--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -76,6 +76,7 @@ border-top: 1px solid #dddddd;
 }
 
 /*-------------COUNTER------------------*/
+/*JELOOOOOO*/
 #notification_count 
 {
 padding: 3px 7px 3px 4px;
@@ -90,6 +91,7 @@ border-radius: 5px;
 position: absolute;
 margin-top: -88px;
 font-size: 15px;
+  display:none; /*JELOOO*/
 }
 
 
