--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -80,6 +80,7 @@ border-top: 1px solid #dddddd;
 #notification_count 
 {
 padding: 3px 7px 3px 4px;
+display: none;
 background: #cc0000;
 color: #ffffff;
 height:50px;
@@ -90,11 +91,8 @@ border-radius: 5px;
 -webkit-border-radius: 2px;
 position: absolute;
 margin-top: -88px;
-font-size: 15px;
-  display:none; /*JELOOO*/
+font-size: 15px; /*JELOOO*/
 }
-
-
 .ci
 {
     font-family: Myriad Pro;
