--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,4 +195,13 @@ min-height: -25px;
 	display:block;
 }
 
+.input-field input[type=search] {
+    height: inherit;
+}
 
+.input-field input[type=search] {
+    display: block;
+    line-height: inherit;
+    padding-left: 4rem;
+    width: calc(100% - 4rem);
+}
