--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -8385,7 +8385,7 @@ button.btn-floating {
 
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #26a69a;
+  color: #64b5f6;/*modified*/
   display: block;
   line-height: 22px;
   padding: 14px 16px;
