--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -9230,8 +9230,8 @@ textarea.materialize-textarea {
 
 [type="radio"]:checked + label:after {
   border-radius: 50%;
-  border: 2px solid #26a69a;
-  background-color: #26a69a;
+  border: 2px solid #42a5f5;
+  background-color: #42a5f5;
   z-index: 0;
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
@@ -9240,13 +9240,13 @@ textarea.materialize-textarea {
 /* Radio With gap */
 [type="radio"].with-gap:checked + label:before {
   border-radius: 50%;
-  border: 2px solid #26a69a;
+  border: 2px solid #42a5f5;
 }
 
 [type="radio"].with-gap:checked + label:after {
   border-radius: 50%;
-  border: 2px solid #26a69a;
-  background-color: #26a69a;
+  border: 2px solid #42a5f5;
+  background-color: #42a5f5;
   z-index: 0;
   -webkit-transform: scale(0.5);
           transform: scale(0.5);
